fix some css styles - mainly mobile layout and scrollbar, add inclusive 'vyber' selection mode

--- a/cms/web.css
+++ b/cms/web.css
@@ -28,7 +28,7 @@ div.LabelDrop { outline: 3px solid #cadfd9; background-color:#cadfd9; }
 /* podle https://chrisbracco.com/css-sticky-footer-effect/ ??? */
 
 html { height:100%; width:100%; }
-body { /*overflow-y:auto;*/ font-family: 'Open Sans', sans-serif; overflow-x:hidden; margin: 0; min-height: 100%; background: #f2f2f2; font-size:10pt;  }
+body { /*overflow-y:auto;*/ font-family: 'Open Sans', sans-serif; overflow-x:hidden; margin: 0; min-height: 100%; width: 100vw; background: #f2f2f2; font-size:10pt; overflow: overlay; }
 
 /*Container stretches to the webpage width, used for main page layout*/
 .container { width: 100vw; position: relative; padding-bottom: 30px; }
@@ -138,10 +138,19 @@ h3 {margin-top: 30px; font-size:15pt; }
 #clanek th { border:1px solid silver; background:silver; }
 
 /*scrollbar*/
-::-webkit-scrollbar {width: 10px;}
-::-webkit-scrollbar-track {background: #f1f1f1;}
-::-webkit-scrollbar-thumb {background: #888;}
+::-webkit-scrollbar {top: 350px;width: 8px; margin-right: 5px; background: transparent;}
+::-webkit-scrollbar-track {background: transparent; margin: 10px 0;}
+::-webkit-scrollbar-thumb {background: #888; border-radius: 10px; }
 ::-webkit-scrollbar-thumb:hover {background: #555;}
+
+
+::-webkit-scrollbar-track-piece
+{
+  background-color: transparent;
+  -webkit-border-radius: 6px;
+}
+
+
 /* ------------------------------------------------------------------- anchor */
 /* USE: add span <span class='anchor' id='desired_id'></span> to the element to point to
         ! parent of the span must be relative in its position
@@ -252,7 +261,7 @@ div.box_input { padding:2em 0 1em; }
 #mobile_menu {display: none}
 #mobile_submenu {background: #f0f5f4;padding-left: 20px;}
 
-#menu { line-height: 0; width: 100%; background-color: white; padding-bottom: 0; }
+#menu { line-height: 0; width: 100vw; background-color: white; padding-bottom: 0; }
 #menu.fixed { position: fixed; top: 0px; z-index: 9;}
 #menu div#bar_items { cursor: pointer;
   display:none; line-height: 1.5em; background: #fff; position: relative; cursor:default;
@@ -315,7 +324,8 @@ div.LabelDrop * {cursor:pointer; }
 
 #vyber input[type=checkbox] + label { padding:0px 5px; }
 #vyber input[type=checkbox]:checked + label { background-color: #67827a !important; color: white !important; }
-
+img#inclusion_icon  {height: 20px !important; margin: 0 15px 0 0; transform: translate(0, 5px); cursor: pointer}
+img.exclusive {filter: opacity(0.5);}
 /* novinky */
 #page_tm a.new, #page_hm a.new, #page_sm a.new { background-image: url(img/new.png);
   background-repeat:no-repeat; background-position: top right; }
@@ -462,7 +472,7 @@ div.kniha_timeline_text {margin-left: 15%;border-left: 13px solid #bfc4cb;paddin
 span.kniha_timeline_date {width: 50px;height: 50px;background: #f2f2f2;color: black;position: absolute;transform: translate(-67px, -15px);
   border-radius: 30px;border: 1px solid black;text-align: center;line-height: 50px;}
 div.kniha_timeline_text_open_front {margin-left: 15.5%; padding: 12px 12px 22px 52px; color: black;font-weight: bold; margin-top: 8px; }
-div.kniha_timeline_text_open_back {margin-left: 15.5%; padding: 0px 22px 12px 52px; color: black;font-weight: bold; margin-bottom: 22px;margin-top: 16px;}
+div.kniha_timeline_text_open_back {margin-left: 15.5%; padding: 0px 22px 12px 52px; color: black;font-weight: bold; margin-top: 16px;}
 span.kniha_timeline_date_open {width: 60px;height: 60px;background: #f2f2f2;color: black;position: absolute;transform: translate(-85px, -29px);
   border-radius: 50px;border: 2px solid black;text-align: center;line-height: 60px;}
 
@@ -624,13 +634,16 @@ label.form_button {float: right}
   #mobile_menu a.jump {display: block}
   #vyber {height: initial}
 
+  a.abstrakt, div.abstrakt {margin: 0.3em 0;padding: .6em 0.5em;}
   /*login*/
   div#user_login, div#user_mail {  padding:1em 2em; }
   div#user_login input, div#user_mail input { width:12.5em; }
   div#user_mail div {width: 12em; margin-top: 2em; height: auto}
 
   /* home page na na výšku */
-  #facebook_content {width: 300px; padding-top: 60px; padding-right: 40px;}
+  #facebook_content {width: 300px; padding-top: 80px; }
+  #facebook_content.content {padding-left: 0 }
+
   #facebook_content:before {transform: translate(00px, -70px);}
   .masonry_container { column-count: 1;}
 
@@ -696,7 +709,7 @@ label.form_button {float: right}
   /* střední písmo menu */
   #web {margin-top: 50px;}
   .masonry_container { column-count: 2;}
-  #facebook_content {width: 300px; padding-top: 60px; padding-right: 40px;}
+  #facebook_content {width: 300px; padding-top: 80px; padding-right: 40px;}
   #facebook_content:before {transform: translate(00px, -70px);}
 
   #list {padding: 0;}
@@ -731,7 +744,7 @@ label.form_button {float: right}
   #logo_ymca { position:absolute; margin: 0 0 0 230px !important; top: 80px; right: 68vw; width: 120px; }
   .iframe_outer {padding-top: 40%;}
   /*homepage changes*/
-  #facebook_content {width: 632px; padding-top: 60px; padding-left: 15px;}
+  #facebook_content {width: 632px; padding-top: 80px; padding-left: 15px;}
   #facebook_content:before {transform: translate(0, -70px);}
   .masonry_container { column-count: 2;}
   /*footer*/
